# study-buddy

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  WEB_APP_README.md  WORKFLOW_DOCUMENTATION.md  analysis-report.json  changelog.md  cleanup-report.md  clear_vector_db.py  fix_database.py  pyproject.toml  requirements.txt  run_webapp.py
app/: main.py
app/agents/: cheatsheet_agent.py  cheatsheet_aggregator_agent.py  flashcard_agent.py  rag_agent.py  tav_agent.py
app/config/: config.py  mcp_controller.py
app/pipeline/: study_pipeline.py
app/prompts/: study_prompts.py
app/services/: anki.py  cheatsheet.py  conversion.py  document_loader.py  flashcards.py  models.py  term_extraction.py  vector_store.py  web_search.py  workflow.py
app/test/: ankiToJsonTest.json  test_agents.py  test_anki_to_json.py  test_cheatsheet.py  test_firecrawl.py  test_flashcards.py  test_langtavily.py  test_markdown_db.py  test_multiple_pdfs.py  test_pipeline.py  test_vector_db.py
app/utils/: agents.py  anki_to_json.py  cards.example.json  example.anki.export.json  firecrawl_handler.py  json_to_anki.py  latex.py  pdf_processor.py  pipeline.py  study_workflow.py  tavily_handler.py
chroma_db/: chroma.sqlite3  processed_files.json
chroma_db/markdown_files/: c0a728850aea249ef465150936a44636_ddf5bf3f-bdce-4c5f-adbe-d8cef8d80992_1.md
docs/: CHANGELOG.md  workflow.md
src/study_buddy/: __init__.py
src/study_buddy/agents/: __init__.py  cheatsheet_agent.py  cheatsheet_aggregator_agent.py  (+3 more)
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: __init__.py  test_cheatsheet.py  test_flashcards.py
(+19 files in other folders)
